<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/screen_add_to_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".common.presentation.ui.MainActivity">

    <TextView
            android:id="@+id/tv_capture_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_number_font_size"
            app:layout_constraintBottom_toTopOf="@id/tv_keyboard_info"
            app:layout_constraintEnd_toEndOf="@id/tv_keyboard_info"
            app:layout_constraintStart_toStartOf="@id/tv_keyboard_info"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_keyboard_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toTopOf="@id/b_keyboard_two"
            app:layout_constraintEnd_toEndOf="@id/b_keyboard_three"
            app:layout_constraintStart_toStartOf="@id/b_keyboard_one" />

    <Button
            android:id="@+id/b_keyboard_one"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_1"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_two"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_two" />

    <Button
            android:id="@+id/b_keyboard_two"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_2"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toTopOf="@id/b_keyboard_five"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_next"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_back" />

    <Button
            android:id="@+id/b_keyboard_three"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_3"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_two"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_two"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_two" />


    <Button
            android:id="@+id/b_keyboard_four"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_4"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_five"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_five" />

    <Button
            android:id="@+id/b_keyboard_five"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_5"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toTopOf="@id/b_keyboard_eight"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_next"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_back" />

    <Button
            android:id="@+id/b_keyboard_six"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_6"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_five"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_five"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_five" />


    <Button
            android:id="@+id/b_keyboard_seven"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_7"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_eight"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_eight" />

    <Button
            android:id="@+id/b_keyboard_eight"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_8"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toTopOf="@id/b_keyboard_zero"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_next"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_back" />

    <Button
            android:id="@+id/b_keyboard_nine"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_9"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_eight"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_eight"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_eight" />

    <ImageButton
            android:id="@+id/b_keyboard_back"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:contentDescription="@string/desc_keyboard_back"
            android:ellipsize="end"
            android:maxLines="1"
            android:src="@drawable/backspace"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_zero"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_zero" />

    <Button
            android:id="@+id/b_keyboard_zero"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_0"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/b_keyboard_next"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_back" />

    <Button
            android:id="@+id/b_keyboard_next"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_size"
            android:text="@string/label_keyboard_OK"
            android:textColor="#FF0000"
            android:textSize="@dimen/key_font_size"
            app:layout_constraintBottom_toBottomOf="@id/b_keyboard_zero"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_keyboard_zero"
            app:layout_constraintTop_toTopOf="@id/b_keyboard_zero" />
</androidx.constraintlayout.widget.ConstraintLayout>